[workspace]
resolver = "2"
members = [
    "can-hal",
    "can-hal-socketcan",
    "can-hal-pcan",
    "can-hal-kvaser",
    "can-hal-isotp",
    "examples/can-hal-pcan",
    "examples/can-hal-socketcan",
    "examples/can-hal-kvaser",
    "examples/can-hal-isotp",
    "hardware-tests",
]

# Workspace-wide Clippy configuration
#
# All crates inherit these via `[lints] workspace = true`.
# CI runs clippy with `-D warnings`, so every `warn` here is effectively `deny`.
#
# Philosophy: enable the pedantic group wholesale, then suppress the lints
# that are too noisy for a CAN-bus project with FFI layers. Cherry-pick from
# restriction, nursery, and cargo for additional safety.
#
# Lints left out intentionally (future adoption, requires dedicated cleanup):
#   clippy::unwrap_used / clippy::expect_used  - ~140 non-test call sites
#   clippy::arithmetic_side_effects            - needs audit of prescaler/DLC math
#   clippy::as_conversions                     - ~76 FFI cast sites

[workspace.lints.clippy]
# Pedantic (enable group, suppress noisy lints)
pedantic = { level = "warn", priority = -1 }
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
too_many_lines = "allow"
enum_glob_use = "allow"
wildcard_imports = "allow"
trivially_copy_pass_by_ref = "allow"
unreadable_literal = "allow"
struct_excessive_bools = "allow"
if_not_else = "allow"
items_after_statements = "allow"
many_single_char_names = "allow"
used_underscore_binding = "allow"
default_trait_access = "allow"
unnecessary_wraps = "allow"
manual_assert = "allow"
verbose_bit_mask = "allow"

# Restriction (cherry-picked for unsafe/FFI discipline)
undocumented_unsafe_blocks = "warn"
multiple_unsafe_ops_per_block = "warn"
panic_in_result_fn = "warn"
let_underscore_must_use = "warn"

# Nursery (mature, low false-positive lints)
missing_const_for_fn = "warn"
use_self = "warn"
derive_partial_eq_without_eq = "warn"
needless_pass_by_ref_mut = "warn"
or_fun_call = "warn"
debug_assert_with_mut_call = "warn"
redundant_pub_crate = "warn"
option_if_let_else = "warn"
large_stack_frames = "warn"

# Cargo (manifest hygiene)
# multiple_crate_versions is useful but currently triggers on syn 1.x/2.x
# in the socketcan transitive dependency tree, which is not actionable.
# multiple_crate_versions = "warn"
negative_feature_names = "warn"
redundant_feature_names = "warn"
wildcard_dependencies = "warn"
